WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259849
REGRESSION (
260398@main
): DOFUS Touch app: Color palette canvas element is blank during character creation
https://bugs.webkit.org/show_bug.cgi?id=259849
Summary
REGRESSION (260398@main): DOFUS Touch app: Color palette canvas element is bl...
Tim Nguyen (:ntim)
Reported
2023-08-04 17:51:19 PDT
rdar://112679186
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2023-08-04 18:14:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16415
EWS
Comment 2
2023-08-07 13:49:40 PDT
Committed
266655@main
(4f35a025c0ba): <
https://commits.webkit.org/266655@main
> Reviewed commits have been landed. Closing PR #16415 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug