Cherry-pick 4798fb6802d2. rdar://problem/113608304

Cherry-pick 4f35a025c0ba. rdar://problem/112679186

        REGRESSION (260398@main): DOFUS Touch app: Color palette canvas element is blank during character creation
        https://bugs.webkit.org/show_bug.cgi?id=259849
        rdar://112679186

        Reviewed by Wenson Hsieh.

        With 260398@main, fewer transitionend events may be emitted for cancelling transitions. Add a Quirk for DOFUS Touch.

        * Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.cpp:
        (WTF::computeSDKAlignedBehaviors):
        * Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
        * Source/WebCore/page/Quirks.cpp:
        (WebCore::Quirks::needsResettingTransitionCancelsRunningTransitionQuirk const):
        * Source/WebCore/page/Quirks.h:
        * Source/WebCore/platform/RuntimeApplicationChecks.h:
        * Source/WebCore/platform/cocoa/RuntimeApplicationChecksCocoa.mm:
        (WebCore::IOSApplication::isDOFUSTouch):
        * Source/WebCore/style/Styleable.cpp:
        (WebCore::updateCSSTransitionsForStyleableAndProperty):

        Canonical link: https://commits.webkit.org/266655@main

    Identifier: 265870.309@safari-7616.1.27.10-branch

Canonical link: https://commits.webkit.org/265870.346@safari-7616-branch