Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h
@@ -110,6 +110,7 @@ enum class SDKAlignedBehavior {
     LiveRangeSelectionEnabledForAllApps,
     DoesNotOverrideUAFromNSUserDefault,
     EvaluateJavaScriptWithoutTransientActivation,
+    ResettingTransitionCancelsRunningTransitionQuirk,
 
     NumberOfBehaviors
 };
