Source/WebCore/platform/RuntimeApplicationChecks.h
@@ -142,6 +142,7 @@ bool isMoviStarPlus();
 bool isSpringBoard();
 bool isUNIQLOApp();
 bool isWechat();
+bool isDOFUSTouch();
 
 } // IOSApplication
 
